MODRS-251 Migrate to Spring Boot v4.0.5 (#257)